# plugin_cafe

./: .gitignore  README.md  prompts.txt  pyproject.toml  run.sh
docs/: Architecture.md  Implementation.md  Scenario.md
docs/mockup/: generate.py  login.html  main.html
env/: requirements-dev.txt  requirements.txt
scripts/pm/: cli.py  config.py  container.py  models.py  paths.py
scripts/pm/api/: orgs.py
scripts/pm/claudeplug/: links.py  registry.py
scripts/pm/services/: activation_service.py  inspect_service.py  install_service.py  org_service.py  preset_service.py
tests/: conftest.py  test_config.py  test_models.py  test_smoke.py
tests/api/: test_contract.py
tests/claudeplug/: test_links.py
tests/services/: conftest.py  test_inspect_service.py  test_install_flow.py  test_org_service.py
tests/support/: fakes.py
web/: index.html
web/css/: style.css
web/js/: sidebar.js
